Mirroed Collection Intances have flipped normals/face orientation. #64284

Closed
opened 2019-05-08 04:37:10 +02:00 by Rafael Fernandes Pereira · 18 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74
Worked: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-03 21:09, hash: ee0d8426ab

Short description of error
Mirroed collections instances have flipped normals in 3D viewport.
Screenshot of viewport with face orientation turned on.
Blue cube is the original mesh in a collection. Red cube is the collection instance mirroed in the X axis.
blender_instance_flipped_normal.jpg

Exact steps for others to reproduce the error

  1. Create collection with any mesh.
  2. Add a Collection Instance of that collection
  3. Use mirror operator with any axis.
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74ee Worked: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-03 21:09, hash: ee0d8426ab6d **Short description of error** Mirroed collections instances have flipped normals in 3D viewport. Screenshot of viewport with face orientation turned on. Blue cube is the original mesh in a collection. Red cube is the collection instance mirroed in the X axis. ![blender_instance_flipped_normal.jpg](https://archive.blender.org/developer/F7014148/blender_instance_flipped_normal.jpg) **Exact steps for others to reproduce the error** 1. Create collection with any mesh. 2. Add a Collection Instance of that collection 3. Use mirror operator with any axis.

Added subscriber: @Ragatol

Added subscriber: @Ragatol

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-05-08 12:50:55 +02:00

Bisected down to: ddb71e8c20

Bisected down to: ddb71e8c20
Clément Foucault was unassigned by Jeroen Bakker 2019-05-09 15:26:52 +02:00
Jeroen Bakker self-assigned this 2019-05-09 15:26:52 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

According to @fclem correct fix is to use apply the flag OB_NEG_SCALE on dupli if the parent has the flag. and remove it if both are true would be nice to have that done in the depsgraph tho

According to @fclem correct fix is to use apply the flag OB_NEG_SCALE on dupli if the parent has the flag. and remove it if both are true would be nice to have that done in the depsgraph tho

Added subscriber: @Sergey

Added subscriber: @Sergey

@Jeroen-Bakker so should we poke @Sergey about this?

@Jeroen-Bakker so should we poke @Sergey about this?
Member

@ZedDB yes, I also want a good opinion about it. currently OB_NEG_SCALE (and its draw manager counterpart DRW_CALL_NEGSCALE) only influences the BACK face checking, what is too limmitted. I can see @fclem analysis to be correct. But before we put any change in depsgraph I want to have some guidance on where and how.

@ZedDB yes, I also want a good opinion about it. currently OB_NEG_SCALE (and its draw manager counterpart DRW_CALL_NEGSCALE) only influences the BACK face checking, what is too limmitted. I can see @fclem analysis to be correct. But before we put any change in depsgraph I want to have some guidance on where and how.

My guess would be deg_objects_dupli_iterator_next

My guess would be deg_objects_dupli_iterator_next
Member

We noticed that normals are off due to recent changes. Here I will elaborate what my findings are. More issues I have seen might be related to this.

Scene I used for testing
#64284.blend

4 days ago 21f8e75ddb everything seems correct

image.png
image.png

Current master 6b082278d1 shows normals inverted and mirrored
image.png

Somewhere in between I see flipped normals (but not mirrored)
image.png

The inverted normals are introduced by ddb71e8c20
The mirrored normals are introduced by 733811330c

It might be that the mirrored normals was a fix so we need to check this against EEVEE normals in this case.
image.png

Broken eevee normals are introduced by f2f62b184c

We noticed that normals are off due to recent changes. Here I will elaborate what my findings are. More issues I have seen might be related to this. Scene I used for testing [#64284.blend](https://archive.blender.org/developer/F7023879/T64284.blend) 4 days ago 21f8e75ddb everything seems correct ![image.png](https://archive.blender.org/developer/F7023894/image.png) ![image.png](https://archive.blender.org/developer/F7024009/image.png) Current master 6b082278d1 shows normals inverted and mirrored ![image.png](https://archive.blender.org/developer/F7023876/image.png) Somewhere in between I see flipped normals (but not mirrored) ![image.png](https://archive.blender.org/developer/F7023898/image.png) The inverted normals are introduced by ddb71e8c20 The mirrored normals are introduced by 733811330c It might be that the mirrored normals was a fix so we need to check this against EEVEE normals in this case. ![image.png](https://archive.blender.org/developer/F7023983/image.png) Broken eevee normals are introduced by f2f62b184c

This issue was referenced by c0b8d071a7

This issue was referenced by c0b8d071a75403c9dcb020420db074e7bb17e887

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @filibis

Added subscriber: @filibis

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I think this issue hasn't been fixed properly or popped again. I'm getting artifacts when I select a mirror object to use as mirror.
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 18:29, hash: d30f72dfd8

chair_mirror_bug.blend

mirrored_object_darkens.gif

artifact_mirror.jpg

face_orientation.jpg

I think this issue hasn't been fixed properly or popped again. I'm getting artifacts when I select a mirror object to use as mirror. *Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-19 18:29, hash: `d30f72dfd8`* [chair_mirror_bug.blend](https://archive.blender.org/developer/F7390915/chair_mirror_bug.blend) ![mirrored_object_darkens.gif](https://archive.blender.org/developer/F7390890/mirrored_object_darkens.gif) ![artifact_mirror.jpg](https://archive.blender.org/developer/F7390889/artifact_mirror.jpg) ![face_orientation.jpg](https://archive.blender.org/developer/F7390888/face_orientation.jpg)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Hello, @filibis

Sorry for this, but could you please open a new report, it is not related to this issue. Your issue is related to autosmooth. When you disable autosmoothing it renders fine.
I will change this issue to resolve as this is related to collections mirroring, what is working as expected.

Hello, @filibis Sorry for this, but could you please open a new report, it is not related to this issue. Your issue is related to autosmooth. When you disable autosmoothing it renders fine. I will change this issue to resolve as this is related to collections mirroring, what is working as expected.

Sorry @Jeroen-Bakker , I thought the issue is related. I created a new report for this: #66183

Sorry @Jeroen-Bakker , I thought the issue is related. I created a new report for this: **[#66183](https://developer.blender.org/T66183)**
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64284
No description provided.